Contact me via telegram

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
               <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="Appointment">
                   <div class="book_btn d-none d-lg-block">
-                    <a href="mailto: hi.tonyonair@gmail.com">СВЯЗАТЬСЯ</a>
+                    <a href="https://t.me/tonyonair" target="_blank">СВЯЗАТЬСЯ</a>
                   </div>
                 </div>
               </div>
