--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="mailto: hi.tonyonair@gmail.com">СВЯЗАТЬСЯ</a>
+                                        <a href="https://t.me/tonyonair" target="_blank">СВЯЗАТЬСЯ</a>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
 
 
     <!-- footer start -->
-    <footer class="footer ">
+    <footer class="footer">
         <div class="footer_top">
             <div class="container">
                 <div class="row justify-content-center">
