Added robots.txt and sitemap.xml

--- a/services.html
+++ b/services.html
@@ -215,7 +215,7 @@
                                 <br /> - монтаж видео;
                                 <br /> - цветокоррекция видео;
                                 <br /> - коррекция и сведение звука;
-                                <br /> - озвучание, запись дикторского текста.
+                                <br /> - озвучка, запись дикторского текста.
                             </p>
                         </div>
                     </div>
