--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         gtag('config', 'UA-161556055-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tony. О себе</title>
+    <title>Антон Грищенко. О себе</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
-        content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
+        content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор киев недорого, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
     <meta property="og:type" content="website" />
     <meta name="og:site_name" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
     <meta property="og:title"
