Typo text. project3

--- a/works.html
+++ b/works.html
@@ -153,7 +153,7 @@
                                 </div>
                                 <div class="gallery_heading">
                                     <a href="project3.html">
-                                        <h4>"Газета Завтра" - Пилот короткометражного сериала</h4>
+                                        <h4>«Газета Завтра» — Пилот короткометражного сериала</h4>
                                     </a>
                                 </div>
                             </div>
