--- a/project3.html
+++ b/project3.html
@@ -12,7 +12,7 @@
         gtag('config', 'UA-161556055-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>"Газета Завтра" - Пилот короткометражного сериала</title>
+    <title>«Газета Завтра» — Пилот короткометражного сериала</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
         content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">"Газета Завтра" - Пилот короткометражного сериала</h3>
+                        <h3 style="text-transform: none;">«Газета Завтра» — Пилот короткометражного сериала</h3>
                     </div>
                 </div>
             </div>
