Typo text. All projects

--- a/project1.html
+++ b/project1.html
@@ -12,7 +12,7 @@
         gtag('config', 'UA-161556055-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Документальный фильм "Дело Бейлиса"</title>
+    <title>Документальный фильм «Дело Бейлиса»</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
         content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">Документальный фильм "Дело Бейлиса"</h3>
+                        <h3 style="text-transform: none;">Документальный фильм «Дело Бейлиса»</h3>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                         <div class="single_details">
                             <h3>Описание</h3>
                             <p>Дело Бейлиса является одним из самым громким судебных процессом в дореволюционной
-                                России.Сопровождаемое активной, антисемисткой компанией, обвинение еврея Менахема
+                                России. Сопровождаемое активной, антисемитской компанией, обвинение еврея Менахема
                                 Менделя Бейлиса в ритуальном убийстве 12-летнего ученика приготовительного класса
                                 Киево-Софийского духовного училища Андрея Ющинского 12 марта 1911 года, вызвало массовые
                                 протесты всероссийского и мирового масштаба.
@@ -144,10 +144,10 @@
                         <div class="single_details">
                             <h3>Моя работа на съемочной площадке:</h3>
                             <ul style="color: #C9C9C9; list-style-type:square;">
-                                <li> - постановка света;</li>
-                                <li> - композиция кадра;</li>
-                                <li> - работа с камерой в движение(стабилизатор, слайдеры);</li>
-                                <li> - cъемки интервью в интерьере и на натуре.</li>
+                                <li> — постановка света;</li>
+                                <li> — композиция кадра;</li>
+                                <li> — работа с камерой в движение (стабилизатор, слайдеры);</li>
+                                <li> — cъемки интервью в интерьере и на натуре.</li>
                             </ul>
                         </div>
 
