--- a/project2.html
+++ b/project2.html
@@ -12,7 +12,7 @@
         gtag('config', 'UA-161556055-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>"РОКЗАРОГОМ" - короткометражный художественный фильм</title>
+    <title>«РОКЗАРОГОМ» — короткометражный художественный фильм</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
         content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">"РОКЗАРОГОМ" - короткометражный художественный фильм</h3>
+                        <h3 style="text-transform: none;">«РОКЗАРОГОМ» — короткометражный художественный фильм</h3>
                     </div>
                 </div>
             </div>
@@ -141,11 +141,11 @@
                         <div class="single_details">
                             <h3>Моя работа на съемочной площадке:</h3>
                             <ul style="color: #C9C9C9; list-style-type:square;">
-                                <li> - автор идеи;</li>
-                                <li> - постановка света;</li>
-                                <li> - съемка в интерьере и натуре;</li>
-                                <li> - работа со стабилизатором во активных сценах;</li>
-                                <li> - работа в клубе с минимальным освещением.</li>
+                                <li> — автор идеи;</li>
+                                <li> — постановка света;</li>
+                                <li> — съемка в интерьере и на натуре;</li>
+                                <li> — работа со стабилизатором в активных сценах;</li>
+                                <li> — работа в клубе с минимальным освещением.</li>
                             </ul>
                         </div>
 
