--- a/project3.html
+++ b/project3.html
@@ -133,19 +133,19 @@
                         <div class="single_details">
                             <h3>Описание</h3>
                             <p>Что если однажды на порог, вместо обыденной газеты, что повествует истории прошлого, тебе
-                                попадется одна, что откроет, перед одним тобой занавес - тайны будущего. Как ты
-                                используешь эти знания? "Газета завтра" - изначально была моим рассказом, которая нашла
+                                попадется одна, что откроет перед одним тобой занавес — тайны будущего. Как ты
+                                используешь эти знания? «Газета завтра» — изначально была моим рассказом, которая нашла
                                 выход в пилотном эпизоде сериала.</p>
 
                         </div>
                         <div class="single_details">
                             <h3>Моя работа на съемочной площадке:</h3>
                             <ul style="color: #C9C9C9; list-style-type:square;">
-                                <li> - автор идеи;</li>
-                                <li> - постановка света;</li>
-                                <li> - разработка сценария;</li>
-                                <li> - съемка в интерьере в сжатые сроки;</li>
-                                <li> - сыиграл эпизодическую роль.</li>
+                                <li> — автор идеи;</li>
+                                <li> — постановка света;</li>
+                                <li> — разработка сценария;</li>
+                                <li> — съемка в интерьере в сжатые сроки;</li>
+                                <li> — сыиграл эпизодическую роль.</li>
                             </ul>
                         </div>
 
