--- a/project5.html
+++ b/project5.html
@@ -133,19 +133,19 @@
                     <div class="col-xl-6 col-md-8 ">
                         <div class="single_details">
                             <h3>Описание</h3>
-                            <p>Первый выпуск тревел блога, в котором, в отличии от других путешественников я раскрываю
+                            <p>Первый выпуск тревел-блога, в котором, в отличии от других путешественников, я раскрываю
                                 причины не ехать в это место.</p>
 
                         </div>
                         <div class="single_details">
                             <h3>Моя работа на съемочной площадке:</h3>
                             <ul style="color: #C9C9C9; list-style-type:square;">
-                                <li> - автор идеи;</li>
-                                <li> - разработка сценария;</li>
-                                <li> - съемка на натуре;</li>
-                                <li> - работа в кадре;</li>
-                                <li> - озвучка;</li>
-                                <li> - монтаж.</li>
+                                <li> — автор идеи;</li>
+                                <li> — разработка сценария;</li>
+                                <li> — съемка на натуре;</li>
+                                <li> — работа в кадре;</li>
+                                <li> — озвучка;</li>
+                                <li> — монтаж.</li>
                             </ul>
                         </div>
 
