--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
         gtag('config', 'UA-161556055-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tony. Услуги и цены</title>
+    <title>Антон Грищенко. Услуги и цены</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
         content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
@@ -143,14 +143,14 @@
                         <div class="service_text padding_left">
 
                             <p>
-                                Предоставляю следующие видео услуги:
-                                <br /> - постановочные виды съемок;
-                                <br /> - съемка музыкальных клипов;
-                                <br /> - короткий метр и полнометражные проекты;
-                                <br /> - запись интервью;
-                                <br /> - создание промо-роликов;
-                                <br /> - съемка backstage;
-                                <br /> - съемка для YouTube (блоги, анбоксинги, обзоры и тд.).
+                                Предоставляю следующие видеоуслуги:
+                                <br /> — постановочные виды съемок;
+                                <br /> — съемка музыкальных клипов;
+                                <br /> — короткий метр и полнометражные проекты;
+                                <br /> — запись интервью;
+                                <br /> — создание промороликов;
+                                <br /> — съемка backstage;
+                                <br /> — съемка для YouTube (блоги, анбоксинги, обзоры и т.д).
                             </p>
                         </div>
                     </div>
@@ -179,11 +179,11 @@
 
                             <p>
                                 В написание сценария входит:
-                                <br /> - разработка идей фильмов, рекламных роликов, короткого метра, полного метра,
+                                <br /> — разработка идей фильмов, рекламных роликов, короткого метра, полного метра,
                                 YouTube проектов, музыкальных клипов;
-                                <br /> - формирование соответствующего контента (описания, скрипты актеров/ведущих,
+                                <br /> — формирование соответствующего контента (описания, скрипты актеров/ведущих,
                                 задания, подводки, подсказки);
-                                <br /> - написание сценария по утвержденной идее.
+                                <br /> — написание сценария по утвержденной идее.
                             </p>
 
 
@@ -212,10 +212,10 @@
                         <div class="service_text padding_left">
                             <p>
                                 В монтаж готового продукта входит:
-                                <br /> - монтаж видео;
-                                <br /> - цветокоррекция видео;
-                                <br /> - коррекция и сведение звука;
-                                <br /> - озвучка, запись дикторского текста.
+                                <br /> — монтаж видео;
+                                <br /> — цветокоррекция видео;
+                                <br /> — коррекция и сведение звука;
+                                <br /> — озвучка, запись дикторского текста.
                             </p>
                         </div>
                     </div>
