--- a/contact.html
+++ b/contact.html
@@ -75,12 +75,13 @@
                 <div class="main-menu  d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a href="index.html">О СЕБЕ</a></li>
-                      <li><a href="works.html">РАБОТЫ</a></li>
-                      <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                      <li><a href="contact.html">КОНТАКТЫ</a></li>
+                        <li><a href="index.html">О СЕБЕ</a></li>
+                        <li><a href="works.html">РАБОТЫ</a></li>
+                        <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
+                        <li><a href="feedback.html">ОТЗЫВЫ</a></li>
+                        <li><a href="contact.html">КОНТАКТЫ</a></li>
                     </ul>
-                  </nav>
+                </nav>
                 </div>
               </div>
               <div class="col-xl-3 col-lg-3 d-none d-lg-block">
