--- a/feedback.html
+++ b/feedback.html
@@ -12,7 +12,7 @@
         gtag('config', 'UA-161556055-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>New Year in Warsaw 2020</title>
+    <title>Антон Грищенко. Отзывы</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
         content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
@@ -103,13 +103,14 @@
         </div>
     </header>
     <!-- header-end -->
+
     <!-- bradcam_area  -->
-    <div class="bradcam_area bradcam_area2 bradcam_bg_1">
+    <div class="bradcam_area bradcam_bg_1">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">New Year in Warsaw 2020</h3>
+                        <h3 style="text-transform: none;">Отзывы</h3>
                     </div>
                 </div>
             </div>
@@ -117,40 +118,88 @@
     </div>
     <!--/ bradcam_area  -->
 
-    <div class="projects_details_area">
-        <div class="container pos_up">
-            <div class="row justify-content-center">
-                <div class="col-lg-10">
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/5FcdWtuLFTo" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="details_info">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6 col-md-8 ">
-                        <div class="single_details">
-                            <h3>Описание</h3>
-                            <p>Репортажное видео настроение новогодней Варшавы 2020. Съемки данного видео проходили при
-                                минусовых температурах, что осложняло процесс.</p>
-                        </div>
-                        <div class="single_details">
-                            <h3>Моя работа на съемочной площадке:</h3>
-                            <ul style="color: #C9C9C9; list-style-type:square;">
-                                <li> - автор идеи;</li>
-                                <li> - разработка сценария;</li>
-                                <li> - съемка на натуре;</li>
-                                <li> - монтаж.</li>
-                            </ul>
-                        </div>
 
+    <!-- testimonial_area  -->
+    <div class="testimonial_area ">
+        <div class="container" style="margin-top: -50px">
+             
+            <div class="row">
+                <div class="col-xl-12">
+
+
+                    <div class="row  " style="margin-bottom: 50px">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"Антон делал нам монтаж видео, все быстро и качественно. Результат очень
+                                    понравился, рекомендую!"
+                                </p><br />
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case7.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3>Анна</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        aria-hidden="true"></i></span>
+                                                <div class="media-body fo">
+                                                    <h3><a href="https://www.instagram.com/ann_minko/" target="_blank">
+                                                            <font size="4">Instagram</font>
+                                                        </a></h3>
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </div>
+                                    <br />
+                                    <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="row border border-bottom-0 border-left-0 border-right-0">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"Отснял несколько видео для тревел-блога, нужно было смонтировать. Обратился к
+                                    Антону, работать с ним в паре понравилось. Обращусь еще раз, как раз готовим
+                                    новое видео."
+                                </p>
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case72.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3>Олег</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        aria-hidden="true"></i></span>
+                                                <div class="media-body fo">
+                                                    <h3><a href="https://www.instagram.com/by_olegminko/"
+                                                            target="_blank">
+                                                            <font size="4">Instagram</font>
+                                                        </a></h3>
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </div>
+                                    <br />
+                                    <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
+    <!-- /testimonial_area  -->
+
 
 
 
