--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                                             <li><a href="index.html">О СЕБЕ</a></li>
                                             <li><a href="works.html">РАБОТЫ</a></li>
                                             <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
+                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
                                             <li><a href="contact.html">КОНТАКТЫ</a></li>
                                         </ul>
                                     </nav>
@@ -113,10 +114,10 @@
 
                             <p style="color:white">
                                 <font size="5">
-                                    Всем привет, меня зовут Антон Грищенко <br /><br />
+                                    Всем привет, меня зовут Антон Грищенко. <br /><br />
 
-                                    Я профессионально занимаюсь видеосъемкой и написанием <br /> сценариев в городе Киев
-                                    <br /> Примеры моих работ в открытом доступе
+                                    Я профессионально занимаюсь видеосъемкой и написанием <br /> сценариев в городе Киев.
+                                    <br /> Примеры моих работ в открытом доступе.
 
                                 </font>
                             </p>
@@ -124,7 +125,7 @@
 
                             <p style="color:white">
                                 <font size="5">
-                                    Буду рад Вам помочь в создании качественного контента
+                                    Буду рад Вам помочь в создании качественного контента!
 
                                 </font>
                             </p>
@@ -143,7 +144,7 @@
 
     <!-- service_area start  -->
     <div class="service_area">
-        <div class="container">
+        <div class="container" style="margin-bottom: -101px">
             <div class="row text-center">
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
@@ -192,6 +193,87 @@
     <!-- service_area end  -->
 
 
+    <!-- testimonial_area  -->
+    <div class="testimonial_area " >
+        <div class="container" style="margin-top: 1px">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title">
+                        <h3>Отзывы</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="testmonial_active owl-carousel">
+                        <div class="single_carousel">
+                            <div class="row">
+                                <div class="col-xl-9 col-md-9">
+                                    <div class="single_testmonial">
+                                        <p>"Антон делал нам монтаж видео, все быстро и качественно. Результат очень
+                                            понравился, рекомендую!"
+                                        </p><br/>
+                                        <div class="testmonial_author">
+                                            <div class="thumb">
+                                                <img src="img/case/case7.png" alt="">
+                                            </div>
+                                            <div class="author_name">
+                                                <h3>Анна</h3>
+                                                <span>
+                                                    <div class="media contact-info">
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                                aria-hidden="true"></i></span>
+                                                        <div class="media-body fo">
+                                                            <h3><a href="https://www.instagram.com/ann_minko/"
+                                                                    target="_blank"><font size="4">Instagram</font></a></h3>
+                                                        </div>
+                                                    </div>
+                                                </span>
+                                            </div>
+                                            <br />
+                                            <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single_carousel">
+                            <div class="row">
+                                <div class="col-xl-9 col-md-9">
+                                    <div class="single_testmonial">
+                                        <p>"Отснял несколько видео для тревел-блога, нужно было смонтировать. Обратился к Антону, работать с ним в паре понравилось. Обращусь еще раз, как раз готовим новое видео."
+                                        </p>
+                                        <div class="testmonial_author">
+                                            <div class="thumb">
+                                                <img src="img/case/case72.png" alt="">
+                                            </div>
+                                            <div class="author_name">
+                                                <h3>Олег</h3>
+                                                <span>
+                                                    <div class="media contact-info">
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                                aria-hidden="true"></i></span>
+                                                        <div class="media-body fo">
+                                                            <h3><a href="https://www.instagram.com/by_olegminko/"
+                                                                    target="_blank"><font size="4">Instagram</font></a></h3>
+                                                        </div>
+                                                    </div>
+                                                </span>
+                                            </div>
+                                            <br />
+                                            <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /testimonial_area  -->
 
 
     <!-- footer start -->
