--- a/project5.html
+++ b/project5.html
@@ -79,6 +79,7 @@
                                             <li><a href="index.html">О СЕБЕ</a></li>
                                             <li><a href="works.html">РАБОТЫ</a></li>
                                             <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
+                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
                                             <li><a href="contact.html">КОНТАКТЫ</a></li>
                                         </ul>
                                     </nav>
