--- a/project7.html
+++ b/project7.html
@@ -64,6 +64,7 @@
                                             <li><a href="index.html">О СЕБЕ</a></li>
                                             <li><a href="works.html">РАБОТЫ</a></li>
                                             <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
+                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
                                             <li><a href="contact.html">КОНТАКТЫ</a></li>
                                         </ul>
                                     </nav>
@@ -102,7 +103,7 @@
     <!--/ bradcam_area  -->
 
     <div class="projects_details_area">
-        <div class="container pos_up">
+        <div class="container pos_up" style="margin-bottom: -50px">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="video-container">
@@ -132,6 +133,88 @@
             </div>
         </div>
     </div>
+
+    <!-- testimonial_area  -->
+    <div class="testimonial_area ">
+        <div class="container" style="margin-top: 0; margin-bottom: 50px">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title">
+                        <h3>Отзывы</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+
+
+                    <div class="row">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"Антон делал нам монтаж видео, все быстро и качественно. Результат очень
+                                    понравился, рекомендую!"
+                                </p>
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case7.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3>Анна</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        aria-hidden="true"></i></span>
+                                                <div class="media-body fo">
+                                                    <h3><a href="https://www.instagram.com/ann_minko/" target="_blank">
+                                                            <font size="4">Instagram</font>
+                                                        </a></h3>
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </div
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xl-12 col-md-9">
+                                <div class="single_testmonial">
+                                    <p>"Отснял несколько видео для тревел-блога, нужно было смонтировать. Обратился к
+                                        Антону, работать с ним в паре понравилось. Обращусь еще раз, как раз готовим
+                                        новое видео."
+                                    </p>
+                                    <div class="testmonial_author">
+                                        <div class="thumb">
+                                            <img src="img/case/case72.png" alt="">
+                                        </div>
+                                        <div class="author_name">
+                                            <h3>Олег</h3>
+                                            <span>
+                                                <div class="media contact-info">
+                                                    <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                            aria-hidden="true"></i></span>
+                                                    <div class="media-body fo">
+                                                        <h3><a href="https://www.instagram.com/by_olegminko/"
+                                                                target="_blank">
+                                                                <font size="4">Instagram</font>
+                                                            </a></h3>
+                                                    </div>
+                                                </div>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /testimonial_area  -->
+
 
 
 
