Added more feedback

--- a/index.html
+++ b/index.html
@@ -238,6 +238,42 @@
                             </div>
                         </div>
 
+
+                        <div class="single_carousel">
+                            <div class="row">
+                                <div class="col-xl-9 col-md-9">
+                                    <div class="single_testmonial">
+                                        <p>"Участвовал в проекте Антона, мне очень понравилось. Снимали видео о моей работе, результат понравился. 
+                                            Антон старается найти такие решения, чтоб ваш видео-ролик получился в результате интересным. <br/>
+                                            Спасибо
+                                            "
+                                        </p>
+                                        <div class="testmonial_author">
+                                            <div class="thumb">
+                                                <img src="img/case/case6.png" alt="">
+                                            </div>
+                                            <div class="author_name">
+                                                <h3>Александр</h3>
+                                                <span>
+                                                    <div class="media contact-info">
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                                aria-hidden="true"></i></span>
+                                                        <div class="media-body fo">
+                                                            <h3><a href="https://www.instagram.com/shalom_byrber/"
+                                                                    target="_blank"><font size="4">Instagram</font></a></h3>
+                                                        </div>
+                                                    </div>
+                                                </span>
+                                            </div>
+                                            <br />
+                                            <a class="boxed-btn3-line" href="project6.html">СМОТРЕТЬ РАБОТУ</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+
                         <div class="single_carousel">
                             <div class="row">
                                 <div class="col-xl-9 col-md-9">
@@ -261,8 +297,40 @@
                                                     </div>
                                                 </span>
                                             </div>
-                                            <br />
+                                            <br/>
                                             <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single_carousel">
+                            <div class="row">
+                                <div class="col-xl-9 col-md-9">
+                                    <div class="single_testmonial">
+                                        <p>"Я мала можливість попрацювати з Антоном на зйомках короткометражного фільму. Дуже якісний оператор,який бачить чудові кадри і вміє спілкуватись з режисером. Бажання працювати,було не вщухало протягом усієї зйомки. Пунктуальний і просто хороша людина. Якість роботи і комфорт буде Вам гарантовано!
+                                            "
+                                        </p>
+                                        <div class="testmonial_author">
+                                            <div class="thumb">
+                                                <img src="img/case/case0.png" alt="">
+                                            </div>
+                                            <div class="author_name">
+                                                <h3>Iрина</h3>
+                                                <span>
+                                                    <div class="media contact-info">
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                                aria-hidden="true"></i></span>
+                                                        <div class="media-body fo">
+                                                            <h3><a href="https://www.instagram.com/Irka_paniv/"
+                                                                    target="_blank"><font size="4">Instagram</font></a></h3>
+                                                        </div>
+                                                    </div>
+                                                </span>
+                                            </div>
+                                            <br />
                                         </div>
                                     </div>
                                 </div>
