--- a/feedback.html
+++ b/feedback.html
@@ -122,7 +122,7 @@
     <!-- testimonial_area  -->
     <div class="testimonial_area ">
         <div class="container" style="margin-top: -50px">
-             
+
             <div class="row">
                 <div class="col-xl-12">
 
@@ -160,7 +160,46 @@
 
 
 
-                    <div class="row border border-bottom-0 border-left-0 border-right-0">
+
+
+                    <div class="row border border-bottom-0 border-left-0 border-right-0" style="margin-bottom: 50px">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"Участвовал в проекте Антона, мне очень понравилось. Снимали видео о моей работе,
+                                    результат понравился.
+                                    Антон старается найти такие решения, чтоб ваш видео-ролик получился в результате
+                                    интересным. <br />
+                                    Спасибо
+                                    "
+                                </p>
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case6.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3>Александр</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        aria-hidden="true"></i></span>
+                                                <div class="media-body fo">
+                                                    <h3><a href="https://www.instagram.com/shalom_byrber/"
+                                                            target="_blank">
+                                                            <font size="4">Instagram</font>
+                                                        </a></h3>
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </div>
+                                    <br />
+                                    <a class="boxed-btn3-line" href="project6.html">СМОТРЕТЬ РАБОТУ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+                    <div class="row border border-bottom-0 border-left-0 border-right-0 " style="margin-bottom: 50px">
                         <div class="col-xl-12 col-md-9">
                             <div class="single_testmonial">
                                 <p>"Отснял несколько видео для тревел-блога, нужно было смонтировать. Обратился к
@@ -191,6 +230,38 @@
                                 </div>
                             </div>
 
+                        </div>
+                    </div>
+
+                    <div class="row border border-bottom-0 border-left-0 border-right-0" style="margin-bottom: 50px">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"Я мала можливість попрацювати з Антоном на зйомках короткометражного фільму. Дуже
+                                    якісний оператор,який бачить чудові кадри і вміє спілкуватись з режисером. Бажання
+                                    працювати,було не вщухало протягом усієї зйомки. Пунктуальний і просто хороша
+                                    людина. Якість роботи і комфорт буде Вам гарантовано!
+                                    "
+                                </p>
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case0.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3>Iрина</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        aria-hidden="true"></i></span>
+                                                <div class="media-body fo">
+                                                    <h3><a href="https://www.instagram.com/Irka_paniv/" target="_blank">
+                                                            <font size="4">Instagram</font>
+                                                        </a></h3>
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
