--- a/project1.html
+++ b/project1.html
@@ -73,15 +73,16 @@
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-7">
-                                <nav>
-                                    <ul id="navigation">
-                                        <li><a href="index.html">О СЕБЕ</a></li>
-                                        <li><a href="works.html">РАБОТЫ</a></li>
-                                        <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                                        <li><a href="feedback.html">ОТЗЫВЫ</a></li>
-                                        <li><a href="contact.html">КОНТАКТЫ</a></li>
-                                    </ul>
-                                </nav>
+                                <div class="main-menu  d-none d-lg-block">
+                                    <nav>
+                                        <ul id="navigation">
+                                            <li><a href="index.html">О СЕБЕ</a></li>
+                                            <li><a href="works.html">РАБОТЫ</a></li>
+                                            <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
+                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
+                                            <li><a href="contact.html">КОНТАКТЫ</a></li>
+                                        </ul>
+                                    </nav>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
