--- a/project6.html
+++ b/project6.html
@@ -155,6 +155,58 @@
     </div>
 
 
+    <!-- testimonial_area  -->
+    <div class="testimonial_area ">
+        <div class="container" style="margin-top: 0; margin-bottom: 50px">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title">
+                        <h3>Отзывы</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+
+
+                    <div class="row">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"Участвовал в проекте Антона, мне очень понравилось. Снимали видео о моей работе, результат понравился. 
+                                    Антон старается найти такие решения, чтоб ваш видео-ролик получился в результате интересным. <br/>
+                                    Спасибо
+                                    "
+                                </p>
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case6.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3>Александр</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        aria-hidden="true"></i></span>
+                                                        <div class="media-body fo">
+                                                            <h3><a href="https://www.instagram.com/shalom_byrber/"
+                                                                    target="_blank"><font size="4">Instagram</font></a></h3>
+                                                        </div>
+                                            </div>
+                                        </span>
+                                    </div
+                                </div>
+                            </div>
+
+                        </div>
+
+          
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /testimonial_area  -->
+
 
     <!-- footer start -->
     <footer class="footer ">
