Amended feedback from Irina

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                         </p>
                                         <div class="testmonial_author">
                                             <div class="thumb">
-                                                <img src="img/case/case0.png" alt="">
+                                                <img src="img/case/case2.png" alt="">
                                             </div>
                                             <div class="author_name">
                                                 <h3>Iрина</h3>
@@ -331,6 +331,7 @@
                                                 </span>
                                             </div>
                                             <br />
+                                            <a class="boxed-btn3-line" href="project2.html">СМОТРЕТЬ РАБОТУ</a>
                                         </div>
                                     </div>
                                 </div>
