--- a/project2.html
+++ b/project2.html
@@ -156,7 +156,55 @@
         </div>
     </div>
 
+ <!-- testimonial_area  -->
+ <div class="testimonial_area ">
+    <div class="container" style="margin-top: 0; margin-bottom: 50px">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="section_title">
+                    <h3>Отзывы</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-12">
 
+
+                <div class="row">
+                    <div class="col-xl-12 col-md-9">
+                        <div class="single_testmonial">
+                            <p>"Я мала можливість попрацювати з Антоном на зйомках короткометражного фільму. Дуже якісний оператор,який бачить чудові кадри і вміє спілкуватись з режисером. Бажання працювати,було не вщухало протягом усієї зйомки. Пунктуальний і просто хороша людина. Якість роботи і комфорт буде Вам гарантовано!
+                                "
+                            </p>
+                            <div class="testmonial_author">
+                                <div class="thumb">
+                                    <img src="img/case/case2.png" alt="">
+                                </div>
+                                <div class="author_name">
+                                    <h3>Iрина</h3>
+                                    <span>
+                                        <div class="media contact-info">
+                                            <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                    aria-hidden="true"></i></span>
+                                            <div class="media-body fo">
+                                                <h3><a href="https://www.instagram.com/Irka_paniv/" target="_blank">
+                                                        <font size="4">Instagram</font>
+                                                    </a></h3>
+                                            </div>
+                                        </div>
+                                    </span>
+                                </div
+                            </div>
+                        </div>
+
+                    </div>
+ 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /testimonial_area  -->
 
     <!-- footer start -->
     <footer class="footer ">
