--- a/project7.html
+++ b/project7.html
@@ -14,7 +14,12 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>ANTI-TRAVEL.special — Барселона, Андорра</title>
-    <meta name="description" content="">
+    <meta name="keywords"
+    content="
+    Антон Грищенко, ANTI-TRAVEL Барселона, Андорра , передача про путешествия, тревел блог, туристическая Барселона, туристическая Андорра, Грищенко, моя работа Грищенко, грищенко работы, Грищенко портфолио, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
+    , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться, портфолио монтажер, портфолио сценарист" />
+  <meta property="og:type" content="website" />
+ <meta name="description" content="Антон Грищенко, ANTI-TRAVEL Барселона, Андорра , передача про путешествия, грищенко работы, Грищенко портфолио, монтажер портфолио, сценарист портфолио,tonyonair ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
