--- a/services.html
+++ b/services.html
@@ -15,19 +15,19 @@
     <title>Антон Грищенко. Услуги и цены</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
-        content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
-    <meta property="og:type" content="website" />
+        content="Антон Грищенко услуги, мои услуги Грищенко, Грищенко видеооператор, грищенко сценарист, грищенко монтажер, услуги видеооператора киев, услуги сценариста киев, услуги монтажера киев, цены Гришенко сьемка, цены Грищенко монтаж, цены грищенко сценарий, цены видеосьмка киев, цены монтаж киев, цены сценарист киев, написание сценариев киев, сценарист киев недорого, видеооператор киев недорого, монтжаер киев недорого, Антон Грищенко, Грищенко, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
+        , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться  
+    " />
+    
+        <meta property="og:type" content="website" />
     <meta name="og:site_name" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
     <meta property="og:title"
         content="TonyOnAir. Видеооператор в Киеве. Видеосъемка. Видеограф - ArtSpace Видеосъемка, видеооператор в Киеве, видеограф" />
     <meta property="og:description"
         content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
     <meta property="og:url" content="https://tonyonair.com.ua" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title"
-        content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
-    <meta name="twitter:description" content="TonyOnAir. Видеосъемка, сценарист, монтажер" />
-    <meta name="description" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
+    
+    <meta name="description" content="Антон Грищенко услуги, услуги видеооператор киев, услуги сценарист киев, услуги монтажер киев, цены видеосьмка киев, цены сценарий киев, цены монтаж киев" />
     <meta name="language" content="RU">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
