--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     <title>Антон Грищенко. О себе</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
-        content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор киев недорого, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
+        content="Антон Грищенко, Грищенко, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
+    , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться " />
     <meta property="og:type" content="website" />
-    <meta name="og:site_name" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
+    <meta name="og:site_name" content="Антон Грищенко, видеооператор в Киеве, видеограф киев, сценарист киев, монтажер киев, Антон грищенко отзывы" />
     <meta property="og:title"
-        content="TonyOnAir. Видеооператор в Киеве. Видеосъемка. Видеограф - ArtSpace Видеосъемка, видеооператор в Киеве, видеограф" />
+        content="Антон Грищенко, видеооператор в Киеве, видеограф киев, сценарист киев, монтажер киев, Антон грищенко отзывы" />
     <meta property="og:description"
-        content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
+        content="Антон Грищенко, видеооператор в Киеве, видеограф киев, сценарист киев, монтажер киев, Антон грищенко отзывы" />
     <meta property="og:url" content="https://tonyonair.com.ua" />
 
-    <meta name="description" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
+    <meta name="description" content="Антон Грищенко, видеооператор в Киеве, видеограф киев, сценарист киев, монтажер киев, Антон грищенко отзывы" />
     <meta name="language" content="RU">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -333,7 +334,39 @@
                                     </div>
                                 </div>
                             </div>
+
+                            
+                        <div class="single_carousel">
+                            <div class="row">
+                                <div class="col-xl-9 col-md-9">
+                                    <div class="single_testmonial"></div>
+                                        <p>"У нас была интересная съемка короткого метра, мы за один день сняли фильм с длительностью 10мин. результатом я доволен) Антон был в качестве автора сценария, и оператора. Мне очень понравилось работать с ним, он очень интересный человек, и профессионал своего дела.) Я думаю что в ближайшее время мы еще поработаем! Удачи, до скорых встреч) Рекомендую!"
+                                        </p>
+                                        <div class="testmonial_author">
+                                            <div class="thumb">
+                                                <img src="img/case/case8.png" alt="">
+                                            </div>
+                                            <div class="author_name">
+                                                <h3>Иван</h3>
+                                                <span>
+                                                    <div class="media contact-info">
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                                aria-hidden="true"></i></span>
+                                                        <div class="media-body fo">
+                                                            <h3><a href="https://www.instagram.com/Voronoi.ivan/"
+                                                                    target="_blank"><font size="4">Instagram</font></a></h3>
+                                                        </div>
+                                                    </div>
+                                                </span>
+                                            </div>
+                                            <br />
+                                            <a class="boxed-btn3-line" href="project3.html">СМОТРЕТЬ РАБОТУ</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
