--- a/project8.html
+++ b/project8.html
@@ -15,19 +15,11 @@
     <title>New Year in Warsaw 2020</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
-        content="Видеооператор в Киеве, видеооператор на свадьбу, видеооператор на выпускной, видеооператор на венчание, видеосъемка интервью, видеосъемка репортажа, видеосъемка дня рождения, свадебная съемка, видеооператор венчание,  Антон Грищенко, Грищенко,  съемка видеороликов киев, видеосъемка проморолика, рекламный видеооператор, видеосьемка корпоратива, видеооператор недорого киев, фото видео на свадьбу, видео цена, видео стоимость, запись интервью, создание промо-роликов, съемка backstage, съемка для YouTube, написание сценариев киев, монтаж видео, запись дикторского текста, tonyonair" />
-    <meta property="og:type" content="website" />
-    <meta name="og:site_name" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
-    <meta property="og:title"
-        content="TonyOnAir. Видеооператор в Киеве. Видеосъемка. Видеограф - ArtSpace Видеосъемка, видеооператор в Киеве, видеограф" />
-    <meta property="og:description"
-        content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
-    <meta property="og:url" content="https://tonyonair.com.ua" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title"
-        content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
-    <meta name="twitter:description" content="TonyOnAir. Видеосъемка, сценарист, монтажер" />
-    <meta name="description" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
+        content="Антон Грищенко, New Year in Warsaw 2020, новый год в польше , передача про путешествия, тревел блог, туристическая польша, Грищенко, моя работа Грищенко, грищенко работы, Грищенко портфолио, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
+        , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться, портфолио монтажер, портфолио сценарист" />
+     
+
+    <meta name="description" content="Антон Грищенко, Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер, tonyonair" />
     <meta name="language" content="RU">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
