new update comments ivan

--- a/feedback.html
+++ b/feedback.html
@@ -14,8 +14,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Антон Грищенко. Отзывы</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="keywords"
-        content=" Антон Грищенко, антон грищенко отзывы, Грищенко отзывы на работу, tonyonair отзывыы, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
+    <meta name="keywords" content=" Антон Грищенко, антон грищенко отзывы, Грищенко отзывы на работу, tonyonair отзывыы, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
         , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться  
         
         " />
@@ -27,7 +26,8 @@
         content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
     <meta property="og:url" content="https://tonyonair.com.ua" />
 
-    <meta name="description" content="Антон Грищенко, антон грищенко отзывы, Грищенко отзывы на работу, tonyonair отзывы, Грищенко отзывы сьемка" />
+    <meta name="description"
+        content="Антон Грищенко, антон грищенко отзывы, Грищенко отзывы на работу, tonyonair отзывы, Грищенко отзывы сьемка" />
     <meta name="language" content="RU">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -198,7 +198,7 @@
                         </div>
                     </div>
 
-                    
+
                     <div class="row border border-bottom-0 border-left-0 border-right-0 " style="margin-bottom: 50px">
                         <div class="col-xl-12 col-md-9">
                             <div class="single_testmonial">
@@ -271,9 +271,11 @@
                 <div class="row border border-bottom-0 border-left-0 border-right-0" style="margin-bottom: 50px">
                     <div class="col-xl-12 col-md-9">
                         <div class="single_testmonial">
-                            <p>"У нас была интересная съемка короткого метра, мы за один день сняли фильм с длительностью 10мин. результатом я доволен) Антон был в качестве автора сценария, и оператора. Мне очень понравилось работать с ним, он очень интересный человек, и профессионал своего дела.) Я думаю что в ближайшее время мы еще поработаем! Удачи, до скорых встреч) Рекомендую!
-
-                                "
+                            <p>"У нас была интересная съемка короткого метра, мы за один день сняли фильм с
+                                длительностью 10мин. результатом я доволен) Антон был в качестве автора сценария, и
+                                оператора. Мне очень понравилось работать с ним, он очень интересный человек, и
+                                профессионал своего дела.) Я думаю что в ближайшее время мы еще поработаем! Удачи, до
+                                скорых встреч) Рекомендую!"
                             </p>
                             <div class="testmonial_author">
                                 <div class="thumb">
@@ -305,8 +307,8 @@
 
 
 
-            </div>
         </div>
+    </div>
     </div>
     <!-- /testimonial_area  -->
 
